# warftpd

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  config.h.template  readme.txt  server.pem  todo.txt  warftpd_config.h.template  worklog.txt
cmake_scripts/: add_and_run_test.cmake  external-projects.cmake
include/warftpd/: Database.h  warftpd.h
sql/: create_db-sqlite.sql
src/: CMakeLists.txt
src/daemon/: CMakeLists.txt  Daemon.h  DaemonImpl.cpp  main.cpp
src/lib/: AuthManagerImpl.cpp  CMakeLists.txt
src/lib/db/: DatabaseImpl.cpp  DatabaseImpl.h  DatabaseImplSqlite.cpp
